--- a/style.css
+++ b/style.css
@@ -1,1 +1,145 @@
+@font-face {
+    font-family: stahlbetontraeger;
+    src: url(fonts/stahlbetontraeger/Stahlbetontraeger-Compressed.otf);
+}
 
+@font-face {
+    font-family: stahlbetontraeger-college;
+    src: url(fonts/stahlbetontraeger/Stahlbetontraeger-College.otf);
+}
+
+@font-face {
+    font-family: amanda;
+    src: url(fonts/amanda/Amanda.otf);
+}
+
+@font-face {
+    font-family: spaceshipbullet;
+    src: url(fonts/spaceship_bullet/spaceshipbullet.ttf);
+}
+
+@font-face {
+    font-family: colaborate;
+    src: url(fonts/Colaborate/ColabMed.otf);
+}
+
+.container {
+	background-image: url('img/the-ocean_bg2.jpg');
+	background-size: 100%;
+	height: 500px;
+}
+
+.header {
+	height: 10%;
+	width: 100%;
+	padding: 10px;
+	
+}
+
+#round {
+	float: right;
+	padding: 5px;
+	
+}
+#round h2 {
+	font-size: 45px;
+	margin: 0px;
+	font-family: stahlbetontraeger;
+	text-shadow: 4px 4px 0 #27408B;
+	color: #B0E0E6;
+	padding-top: 5px;
+}
+
+#worth {
+	float: right;
+	text-align: center;
+	margin-right: 10px;
+}
+
+#worth h2 {
+	font-size: 30px;
+	font-family: amanda;
+	color:#FFFF00;
+	text-shadow: 1px 1px 1px black;
+	margin: 0px;
+	background-color: #9ACD32;
+	border-radius: 25px;
+	padding: 10px 5px 5px 5px;
+	margin-right: 10px;
+}
+
+.main {
+	height: 70%;
+	margin: 10px;
+	position: relative;
+	top: 10px;
+	clear: both;
+	padding: 10px;
+
+}
+
+.span2 {
+	}
+	
+.footer {
+	height: 15%;
+	position: relative;
+	top: 40px;
+	
+	
+}
+
+.button1, .button2,.button3, .button4 {
+	float: left;
+	margin: 15px 0px 10px 20px;
+	width: 100px;
+	margin: 30px 0px 10px 30px;
+	text-align: center;
+	font-family: spaceshipbullet;
+	color: #FFB90F;
+	text-shadow: 1px 1px 1px #8B6508;
+	font-size: 30px;
+	font-weight: bold;
+	background-color: #C1CDCD;
+	padding: 5px;
+
+	
+}
+
+.player {
+	float: right;
+	height: 50px;
+	width: 500px;
+	background-color: #698B69;
+	border-radius: 10px;
+	margin: 10px;
+	padding: 10px
+}
+
+.button6 {
+	height: 35px;
+	width: 200px;
+	color: #C1FFC1;
+	font-family: spaceshipbullet;
+	text-shadow: 1px 1px 1px #9BCD9B;
+	font-size: 45px;
+	margin: 13px;
+}
+.value {
+	position: relative;
+	top: -10px;
+	
+	
+}	
+
+.value1, .value2, .value3, .value4{
+     float: left;
+	 font-family: spaceshipbullet;
+	 font-size: 33px;
+	 color: #CAFF70;
+	 text-shadow: 1px 1px 1px #006400;
+	 border-radius: 20px;
+	 margin: -15px 0px 0px 67px;
+	
+}
+}
